# point_cloud_fusion

./: CMakeLists.txt  README.md  demo_points.txt  package.xml
launch/: 3dRebuild_4bag_fusion.sh  3dRebuild_4color_pc_fusion.sh  get_gazebo_link_pose_ITS.launch  its_point_cloud_fusion_3f1r copy.launch  its_point_cloud_fusion_3f1r.launch  point_cloud_fusion.launch  point_cloud_fusion_2pc.launch  point_cloud_fusion_2pc_color.launch  point_cloud_fusion_3pc.launch  point_cloud_fusion_real.launch  point_cloud_sync_fusion_2pc.launch  point_cloud_sync_fusion_2pc_color.launch  point_cloud_sync_fusion_4pc.launch  point_cloud_sync_fusion_4pc_color.launch
rviz/: 2pc_fusion.rviz  3dRebuild_pc_color_fusion.rviz  3dRebuild_pc_fusion.rviz
script/: get_gazebo_link_pose_ITS_neuvition.py  get_gazebo_link_pose_ITS_realsense.py
src/: pcl_fusion.cpp  pcl_fusion_color.cpp  pcl_fusion_real copy.cpp  pcl_fusion_real.cpp
