<?xml version="1.0"?>
<package>
  <name>point_cloud_fusion</name>
  <version>0.0.0</version>
  <description>The point_cloud_fusion package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="LIUY0185@e.ntu.edu.sg">Liu Yiyao</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  
  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>stereo_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
